@@ -226,6 +226,7 @@ type timestamptz = CalendarLib.Calendar.t * CalendarLib.Time_Zone.t
 type int16 = int
 type bytea = string (* XXX *)
 type point = float * float
+type hstore = (string * string option) list
 
 type bool_array = bool array
 type int32_array = int32 array
@@ -245,6 +246,7 @@ val string_of_int32 : int32 -> string
 val string_of_int64 : int64 -> string
 val string_of_float : float -> string
 val string_of_point : point -> string
+val string_of_hstore : hstore -> string
 val string_of_inet : inet -> string
 val string_of_timestamp : CalendarLib.Calendar.t -> string
 val string_of_timestamptz : timestamptz -> string
@@ -269,6 +271,7 @@ val int32_of_string : string -> int32
 val int64_of_string : string -> int64
 val float_of_string : string -> float
 val point_of_string : string -> point
+val hstore_of_string: string -> hstore
 val inet_of_string : string -> inet
 val timestamp_of_string : string -> CalendarLib.Calendar.t
 val timestamptz_of_string : string -> timestamptz
