@@ -5,6 +5,7 @@ Release 1.5-dev
   bool[], int8[], text[], float4[], and float8[].
 * Michael Ekstrand's patch to make PG'Ocaml work with batteries,
   if so requested (it still uses ExtLib by default).
+* Dario Teixeira's patch adding support for Hstore.
 
 
 Release 1.4
